--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,7 +17,7 @@
     <script src="{{'splide.js' | asset_url}}" defer></script>
     <script src="{{'application.js' | asset_url}}" defer></script>
     {% comment %} <script src="{{ 'banner-top' | asset_url }}" defer></script> {% endcomment %}
-    <script src="http://localhost:5174/dist/assets/index.js" defer></script>
+    {% comment %} <script src="http://localhost:5174/dist/assets/index.js" defer></script> {% endcomment %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" defer></script>
   </head>
   <body>
