--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -2,7 +2,7 @@
 
 <!-- Desktop menu -->
 
-<nav class="navbar sticky" data-section="{{ section.id }}">
+<nav class="navbar sticky" data-section-header="{{ section.id }}">
   <!-- mobile menu burger-->
   <div class="mobile-menu-icon">
     <i class="fa-solid fa-bars"></i>
