--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -1,5 +1,5 @@
 <div class="product-card">
-  <div class="product-card-inner">
+  <a href="{{ product.url }}" class="product-card-inner">
     <div class="card-image">
       {% if product.featured_image %}
         <img
@@ -11,7 +11,17 @@
       {% endif %}
     </div>
     <div class="product-tag">
-      <span>Best Seller</span>
+      {% if product.available == false %}
+        <span>Sold Out</span>
+      {% elsif product.price > product.compare_at_price %}
+        {% capture discount %}
+          You save {{ product.price | minus: product.compare_at_price_max | money_without_trailing_zeros }}
+        {% endcapture %}
+        <span>{{ discount }}</span>
+      {% elsif product.metafields.tags.best_seller.value == true %}
+        <span>Best Seller</span>
+
+      {% endif %}
     </div>
     <div class="variants-info">
       <div class="color-variants">
@@ -25,19 +35,30 @@
           id="">
       </div>
       <div class="size-variants">
-        {% for variant in product.options %}
-          <span>{{ variant.title }}</span>
-        {% endfor %}
+
+
+        {% unless product.has_only_default_variant %}
+          {% for option in product.options_with_values %}
+            {% for value in option.values %}
+              <span>{{ value | escape }}</span>
+            {% endfor %}
+          {% endfor %}
+        {% endunless %}
       </div>
     </div>
-  </div>
+  </a>
   <div class="product-card-info">
     <div class="name-wishlist">
-      <a href="#" class="name">{{ product.title }}</a>
-      <div class="product-card-wishlist">
-        <i class="fa-solid fa-heart"></i>
+      <a href="{{ product.url }}" class="name">{{ product.title }}</a>
+      <div class="product-card-wishlist" data-variantID="{{ product.first_available_variant.id }}">
+        <i class="fa-solid fa-heart product-card-wishlist-btn"></i>
       </div>
     </div>
-    <div class="price">{{ product.price | money_with_currency }}</div>
+    {% if product.price > product.compare_at_price %}
+      <span class="price original-price">{{ product.price | money }}</span>
+      <span class="price dicounted-price">{{ product.compare_at_price | money }}</span>
+    {% else %}
+      <div class="price">{{ product.price | money }}</div>
+    {% endif %}
   </div>
 </div>
