working on variant selectos

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1476,3 +1476,17 @@ footer{
         }
     }
 }
+
+.product-page{
+    .product-section{
+        display: flex;
+        max-width: 100%;
+        .product-medias{
+            width: 50%;
+            height: 100%;
+        }
+        .product-info{
+            flex: 0 0 50%;
+        }
+    }
+}
