--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1290,6 +1290,20 @@ footer section ul li:hover, footer section ul li a:hover {
   color: white;
 }
 
+.product-page {
+  width: calc(100% - 30px);
+  margin-inline: auto;
+}
+.product-page .page-breadcrumbs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+.product-page .page-breadcrumbs .breadcrumbs {
+  color: #868686;
+  font-size: 12px;
+}
 .product-page .product-section {
   display: flex;
   max-width: 100%;
@@ -1299,5 +1313,214 @@ footer section ul li:hover, footer section ul li a:hover {
   height: 100%;
 }
 .product-page .product-section .product-info {
-  flex: 0 0 50%;
+  width: 50%;
+  padding: 0 15px;
+}
+.product-page .product-section .product-info .prod-title {
+  font-weight: 400;
+}
+.product-page .product-section .product-info .prod-price {
+  font-size: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e6e6e6;
+}
+.product-page .product-section .product-info .prod-price .dicounted-original-price {
+  color: red;
+  text-decoration: line-through;
+  font-size: 18px;
+}
+.product-page .product-section .product-info .prod-short-desc {
+  font-size: 14px;
+  color: #868686;
+  margin-top: 10px;
+}
+.product-page .product-section .product-info .prod-variants {
+  margin-top: 10px;
+}
+.product-page .product-section .product-info .prod-variants .prod-option .option-title {
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+}
+.product-page .product-section .product-info .prod-variants .prod-option .option-value {
+  cursor: pointer;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  margin: 10px 0;
+  transition: all 0.2s;
+}
+.product-page .product-section .product-info .prod-variants .prod-option .option-value.active {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: #0ec1ae;
+}
+.product-page .product-section .product-info .prod-variants .prod-option .option-value:hover {
+  border-color: black;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity {
+  display: flex;
+  height: 55px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  margin-top: 20px;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid #e6e6e6;
+  min-width: 140px;
+  width: 140px;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity .quantity-selector {
+  font-size: 28px;
+  background: none;
+  color: #e6e6e6;
+  padding: 0 15px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity .quantity-selector:hover {
+  color: #0ec1ae;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity input {
+  border: none;
+  height: 100%;
+  text-align: center;
+  width: 35px;
+  font-size: 18px;
+  font-weight: 500;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity input::-webkit-outer-spin-button, .product-page .product-section .product-info .add-to-cart-and-quantity .prod-quantity input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button {
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  transition: all 0.2s;
+  height: 100%;
+  width: 100%;
+  min-width: 140px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button:hover {
+  color: white;
+  background-color: #0ec1ae;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button .add-cart-button-text {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.2s;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button.waiting .add-cart-button-text {
+  visibility: hidden;
+  opacity: 0;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button .lds-dual-ring {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button .lds-dual-ring.active {
+  display: inline-block;
+  visibility: visible;
+  opacity: 1;
+}
+.product-page .product-section .product-info .add-to-cart-and-quantity .add-to-cart-button .lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin-left: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.tabs {
+  display: flex;
+  flex-direction: column;
+  margin-inline: auto;
+  /* align-items: center; */
+  justify-content: center;
+  /* margin: auto; */
+  border-top: 1px solid #e6e6e6;
+  margin-top: 50px;
+  padding: 30px 20px;
+}
+
+.tab-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tab-btn {
+  padding: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: center;
+  font-size: 20px;
+}
+
+.tab-btn.active span {
+  border-bottom: 2px solid black;
+  padding: 10px 0;
+}
+
+.tabs-content {
+  border-top: none;
+  position: relative;
+  margin-top: 20px;
+}
+
+.tab-content {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  transition: all 0.3s;
+  transform: translate(-50px, 0);
+}
+
+.tab-content.active {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(0, 0);
+  display: block;
+  position: relative;
 }/*# sourceMappingURL=theme.css.map */
