--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1478,15 +1478,255 @@ footer{
 }
 
 .product-page{
+    width: calc(100% - 30px);
+    margin-inline: auto;
+    .page-breadcrumbs{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+        .breadcrumbs{
+            color: $pri-cl;
+            font-size: 12px;
+        }
+    }
     .product-section{
         display: flex;
         max-width: 100%;
         .product-medias{
             width: 50%;
             height: 100%;
+            // padding: 0 15px;
         }
         .product-info{
-            flex: 0 0 50%;
+            width: 50%;
+            padding: 0 15px;
+            .prod-title{
+                font-weight: 400;
+            }
+            .prod-price{
+                font-size: 20px;
+                padding-bottom: 10px;
+                border-bottom: 1px solid $border-color;
+                .dicounted-original-price{
+                    color: red;
+                    text-decoration:line-through;
+                    font-size: 18px;
+                }
+            }
+            .prod-short-desc{
+                font-size: 14px;
+                color: $pri-cl;
+                margin-top: 10px;
+            }
+            .prod-variants{
+                margin-top: 10px;
+                .prod-option{
+                    .option-title{
+                        text-transform: uppercase;
+                        font-size: 13px;
+                        font-weight: 500;
+                    }
+                    .option-value{
+                        cursor: pointer;
+                        display: inline-flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 5px 10px;
+                        border: 1px solid $border-color;
+                        border-radius: 4px;
+                        margin: 10px 0;
+                        transition: all 0.2s;
+                        &.active{
+                            background-color: $primary-hover-color;
+                            color: white;
+                            border-color: $primary-hover-color;
+                        }
+                        &:hover{
+                            border-color: black;
+                        }
+                    }
+                }
+            }
+            .add-to-cart-and-quantity{
+                display: flex;
+                height: 55px;
+                column-gap: 10px;
+                margin-top: 20px;
+                .prod-quantity{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    border: 2px solid $border-color;
+                    min-width: 140px;
+                    width: 140px;
+                    .quantity-selector{
+                        font-size: 28px;
+                        background: none;
+                        color: $border-color;
+                        padding: 0 15px;
+                        border: none;
+                        cursor: pointer;
+                        transition: all 0.2s;
+                        &:hover{
+                            color: $primary-hover-color;
+                        }
+                    }
+                    input{
+                        border: none;
+                        height: 100%;
+                        text-align: center;
+                        width: 35px;
+                        font-size: 18px;
+                        font-weight: 500;
+
+                        &::-webkit-outer-spin-button,
+                        &::-webkit-inner-spin-button {
+                          -webkit-appearance: none;
+                          margin: 0;
+                        }
+                        
+                    }
+                }
+
+
+                    .add-to-cart-button{
+                        padding: 10px 20px;
+                        background-color: black;
+                        color: white;
+                        border: none;
+                        font-size: 16px;
+                        font-weight: 500;
+                        text-transform: uppercase;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        position: relative;
+                        transition: all 0.2s;
+                        height: 100%;
+                        width: 100%;
+                        min-width: 140px;
+                        transition: all 0.2s;
+                        cursor: pointer;
+
+                        &:hover{
+                            color: white;
+                            background-color: $primary-hover-color;
+                        }
+                    
+                        .add-cart-button-text{
+                            visibility: visible;
+                            opacity: 1;
+                            transition: all 0.2s;
+                        }
+                        &.waiting {
+                            .add-cart-button-text{
+                                visibility: hidden;
+                                opacity: 0;
+                            }
+                        }
+                    
+                        .lds-dual-ring {
+                            display: inline-block;
+                            width: 16px;
+                            height: 16px;
+                            visibility: hidden;
+                            opacity: 0;
+                            transition: all 0.2s;
+                            position: absolute;
+                            top: 50%;
+                            right: 50%;
+                            transform: translate(-50%, -50%);
+                            
+                            &.active{
+                                display: inline-block;
+                                visibility: visible;
+                                opacity: 1;
+                            }
+                          }
+                          .lds-dual-ring:after {
+                            content: " ";
+                            display: block;
+                            width: 10px;
+                            height: 10px;
+                            margin-left: 8px;
+                            border-radius: 50%;
+                            border: 6px solid #fff;
+                            border-color: #fff transparent #fff transparent;
+                            animation: lds-dual-ring 1.2s linear infinite;
+                          }
+                          @keyframes lds-dual-ring {
+                            0% {
+                              transform: rotate(0deg);
+                            }
+                            100% {
+                              transform: rotate(360deg);
+                            }
+                          }
+                    }
+                
+            }
         }
     }
+}
+
+
+.tabs {
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+    margin-inline: auto;
+    /* align-items: center; */
+    justify-content: center;
+    /* margin: auto; */
+    border-top: 1px solid $border-color;
+    margin-top: 50px;
+    padding: 30px 20px;
+}
+
+.tab-btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tab-btn {
+    padding: 20px;
+    // width: 100%;
+    cursor: pointer;
+    transition: 0.3s;
+    text-align: center;
+    font-size: 20px;
+}
+
+.tab-btn.active {
+    span{
+        border-bottom: 2px solid $black;
+        padding: 10px 0;
+    }
+}
+
+.tabs-content {
+    border-top: none;
+    position: relative;
+    margin-top: 20px;
+}
+
+.tab-content {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    transition: all 0.3s;
+    transform: translate(-50px, 0);
+}
+
+.tab-content.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0,0);
+    display: block;
+    position: relative;
 }
