--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -1,33 +1,3 @@
-{% comment %} {% assign current_variant = product.selected_or_first_available_variant %}
-  {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
-  <img src="{{ featured_image | img_url: 'large' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg">
-  {% for image in product.images %}
-  <a href="{{ image.src | img_url: 'large' }}">
-  <img src="{{ image.src | img_url: 'compact' }}" alt="{{ image.alt | escape }}">
-  </a>
-  {% endfor %}
-  <h1>{{ product.title }}</h1>
-  <form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm">
-  <select name="id" id="productSelect">
-  {% for variant in product.variants %}
-  {% if variant.available %}
-  <option value="{{ variant.id }}">
-  {{ variant.title }} - {{ variant.price | money_with_currency }}
-  </option>
-  {% else %}
-  <option disabled="disabled">
-  {{ variant.title }} - sold out
-  </option>
-  {% endif %}
-  {% endfor %}
-  </select>
-  {{ current_variant.price | money }}
-  <label for="Quantity">quantity</label>
-  <input type="number" id="Quantity" name="quantity" value="1" min="1">
-  <button type="submit" name="add" id="AddToCart">Add to cart</button>
-  </form>
-<div>{{ product.description }}</div> {% endcomment %}
-
 {% assign selected_variant = product.selected_or_first_available_variant %}
 
 
@@ -61,15 +31,16 @@
           <section class="splide product-main-image-slider">
             <div class="splide__track">
               <div class="splide__list">
-                {% for image in product.images %}
-                  <div class="splide__slide">
-                    <img
-                      src="{{ image.src | img_url: 'large' }}"
-                      loading="lazy"
-                      alt="">
-                  </div>
-                {% endfor %}
-
+                {% if product.options contains 'Color' %}
+                  {% for image in product.images %}
+                    <div class="splide__slide">
+                      <img
+                        src="{{ image.src | img_url: 'large' }}"
+                        loading="lazy"
+                        alt="">
+                    </div>
+                  {% endfor %}
+                {% endif %}
               </div>
             </div>
           </section>
@@ -109,35 +80,55 @@
           name="id"
           value="{{ selected_variant.id }}">
         <h1 class="prod-title">{{ product.title }}</h1>
-        <span class="prod-price">{{ selected_variant.price | money }}</span>
-        <div>
-          selected: {{ selected_variant.title }}</div>
-        <p class="prod-desc">{{ product.description | truncatewords: 15 }}</p>
+        <div class="prod-price">
+          {% if selected_variant.price > selected_variant.compare_at_price %}
+            <span class="dicounted-original-price">{{ selected_variant.price | money }}</span>
+            <span class="prod-discounted-price">
+              {{ selected_variant.compare_at_price | money }}</span>
+          {% else %}
+            <span>{{ selected_variant.price | money }}</span>
+          {% endif %}
+        </div>
+        <p class="prod-short-desc">{{ product.description | truncatewords: 15 | strip_html }}</p>
         <div class="prod-variants" data-url="{{ product.url }}">
-          {% for option in product.options_with_values %}
-            <div class="prod-option">
-              <div class="option-title">{{ option.name | escape }} : {{ option.selected_value }}</div>
-              {% for value in option.values %}
-                <span
-                  data-swatch-type="{{option.name}}"
-                  class="option-value{% if option.selected_value == value %} is_selected active {% endif %}"
-                  data-value="{{ value }}">{{ value }}</span>
-              {% endfor %}
-            </div>
-          {% endfor %}
-          <div>
-            <label for="Quantity-{{section.id}}">Quantity</label>
+          {% unless product.has_only_default_variant %}
+            {% for option in product.options_with_values %}
+              <div class="prod-option">
+                <div class="option-title">{{ option.name | escape }} : {{ option.selected_value }}</div>
+                {% for value in option.values %}
+                  <span
+                    data-swatch-type="{{option.name}}"
+                    data-slide="{{ forloop.index0 }}"
+                    class="option-value{% if option.selected_value == value %} is_selected active {% endif %}"
+                    data-value="{{ value }}">{{ value }}</span>
+                {% endfor %}
+              </div>
+            {% endfor %}
+          {% endunless %}
+          <script type="application/json">
+            {{ product.variants | json }}
+          </script>
+        </div>
+        <div class="add-to-cart-and-quantity">
+          <div class="prod-quantity">
+            <button class="quantity-selector is--minus">-</button>
             <input
               type="number"
+              class="prod-quantity-input"
               name="quantity"
               min="1"
               id="Quantity-{{section.id}}"
+              size="4"
+              pattern="[0-9]*"
+              inputmode="numeric"
+              data-current-qty=""
               value="1">
+            <button class="quantity-selector is--plus">+</button>
           </div>
           <button
             type="submit"
             name="add"
-            class="checkout-button"
+            class="add-to-cart-button"
             {% if selected_variant.available == false %}
             disabled
             {% endif %}>
@@ -145,46 +136,87 @@
  selected_variant.available == false %}
               Soldout
             {% else %}
-              Add to Cart
+              <span class="add-cart-button-text">Add to Cart</span>
             {% endif %}
+            <span class="lds-dual-ring"></span>
           </button>
-          <script type="application/json">
-            {{ product.variants | json }}
-          </script>
         </div>
       {% endform %}
+      <!-- wishlist and compare block -->
+      <div class="wis_cp_container">
+        <a
+          href="{{ product.url }}"
+          data-id="{{ selected_variant.id }}"
+          class="wis-button-container">
+          <span class="wis-button-icon">
+            <i class="fa-regular fa-heart"></i>
+          </span>
+          <span class="wis-button-text">Add to wishlist</span>
+        </a>
+        <a
+          href="{{ product.url }}"
+          data-id="{{ selected_variant.id }}"
+          class="cp-button-container">
+          <span class="cp-button-icon">
+            {% include 'compare-icon' %}
+          </span>
+          <span class="cp-button-text">compare</span>
+        </a>
+      </div>
+      {% comment %} Popups {% endcomment %}
+      <div class="product-info-popups container">
+        <a href="{{ product.url }}">Delivery & Return</a>
+        <a href="{{ product.url }}">Ask a question</a>
+      </div>
+      <div class="product-tags">
+        <span>Categories:
+        </span>
+        {% for tag in product.tags %}
+          <span>{{ tag }}
+          </span>
+        {% endfor %}
+      </div>
+      <div class="social-share">
+        {% render 'socials' %}
+      </div>
     </div>
   </div>
 </div>
+<div class="tabs-container">
+  <section class="tabs">
+    <div class="tab-btns">
+      <div class="tab-btn active">
+        <span>Description</span>
+      </div>
+      <div class="tab-btn">
+        <span>Additional Information</span>
+      </div>
+      <div class="tab-btn">
+        <span>Reviews</span>
+      </div>
+    </div>
+    <div class="tabs-content">
+      <div class="tab-content active">{{ product.description }}</div>
+      <div class="tab-content">
+        {% if product.metafields.tabs.materials.value != null %}
+          <p>
+            {{ product.metafields.tabs.materials.value }}
+          </p>
+        {% else %}
+          <p>Please contact us to know the materials</p>
+        {% endif %}
+      </div>
+      <div class="tab-content">
+        <p>{{ section.settings.thirdTabContent }}
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
+<div class="related-recent-products-container">
+  {% include 'related-recent-products' %}
+</div>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    let thumbnails = new Splide(".splide.product-images-nav-slider", {
-      fixedWidth: 100,
-      fixedHeight: 60,
-      gap: 10,
-      rewind: true,
-      pagination: false,
-      isNavigation: true,
-      breakpoints: {
-        600: {
-          fixedWidth: 60,
-          fixedHeight: 44
-        }
-      }
-    });
-
-    let main = new Splide(".splide.product-main-image-slider", { // rewind: true,
-      type: "loop",
-      pagination: false,
-      perPage: 1
-    });
-
-    main.sync(thumbnails);
-    main.mount();
-    thumbnails.mount();
-  });
-</script>
 
 {% schema %}
   {
