--- a/snippets/newsletter.liquid
+++ b/snippets/newsletter.liquid
@@ -5,21 +5,5 @@
     <input type="email" placeholder="Your email address">
     <button>SUBSCRIBE</button>
   </div>
-  <div class="socials">
-    <span>
-      <i class="fa-brands fa-facebook-f"></i>
-    </span>
-    <span>
-      <i class="fa-brands fa-twitter"></i>
-    </span>
-    <span>
-      <i class="fa-brands fa-instagram"></i>
-    </span>
-    <span>
-      <i class="fa-brands fa-dribbble"></i>
-    </span>
-    <span>
-      <i class="fa-brands fa-pinterest"></i>
-    </span>
-  </div>
+  {% render 'socials' %}
 </section>
