--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -149,7 +149,7 @@
           data-id="{{ selected_variant.id }}"
           class="wis-button-container">
           <span class="wis-button-icon">
-            <i class="fa-regular fa-heart"></i>
+            {% include 'heart-icon' %}
           </span>
           <span class="wis-button-text">Add to wishlist</span>
         </a>
