created cart drawer

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -22,6 +22,8 @@
   </head>
   <body>
     {% section 'header' %}
+    {% section 'cart-mini' %}
+    <div class="background-overlay"></div>
     <main role="main">
       {{ content_for_layout }}
     </main>
