--- a/assets/theme.css
+++ b/assets/theme.css
@@ -162,11 +162,11 @@ html {
   left: 0;
   width: 340px;
   background-color: white;
-  z-index: 100;
+  z-index: 999;
   height: 100%;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   transform: translate3d(-100%, 0, 0);
-  transition: transform 0.4s, visibility 0.4s;
+  transition: transform 0.4s, visibility 0.4s, opacity 0.2s;
 }
 .mobile-menu-drawer.active {
   transform: translate3d(0, 0, 0);
@@ -265,6 +265,11 @@ html {
   font-size: 12px;
   transition: all 0.2s;
   cursor: pointer;
+}
+.splide.hero .slide-info-box button:hover {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: black;
 }
 .splide.hero .slide-info-box button:hover {
   background-color: #0ec1ae;
@@ -484,6 +489,11 @@ html {
 }
 .collections-slider .splide__slide .collection-slide-info-box button:hover {
   background-color: #0ec1ae;
+  color: white;
+  border-color: black;
+}
+.collections-slider .splide__slide .collection-slide-info-box button:hover {
+  background-color: #0ec1ae;
   border-color: #0ec1ae;
   color: white;
 }
@@ -518,6 +528,11 @@ html {
   cursor: pointer;
   color: black;
   border: 2px solid black;
+}
+.banner-with-text .banner-info button:hover {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: black;
 }
 .banner-with-text .banner-info button:hover {
   background-color: #0ec1ae;
@@ -715,16 +730,16 @@ footer section ul li:hover, footer section ul li a:hover {
   transition: opacity 0.2s;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-.mega-menu.active {
-  visibility: visible;
-  opacity: 1;
-}
-.mega-menu.active.mega {
+.mega-menu.mega {
   right: 0;
   left: 0;
   width: 70%;
   max-width: 700px;
   margin: 0 auto;
+}
+.mega-menu.active {
+  visibility: visible;
+  opacity: 1;
 }
 .mega-menu .childlinks-with-children {
   width: 600px;
@@ -974,6 +989,11 @@ footer section ul li:hover, footer section ul li a:hover {
 }
 .comment-form .comment-form-form .comment-submit button:hover {
   background-color: #0ec1ae;
+  color: white;
+  border-color: black;
+}
+.comment-form .comment-form-form .comment-submit button:hover {
+  background-color: #0ec1ae;
 }
 
 .blog-page {
@@ -1211,6 +1231,11 @@ footer section ul li:hover, footer section ul li a:hover {
   cursor: pointer;
   margin-top: 20px;
   font-size: 16px;
+}
+.cart-page form .cart-info .form-details-buttons button:hover {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: black;
 }
 .cart-page form .cart-info .form-details-buttons button:hover {
   background-color: #0ec1ae;
@@ -1507,6 +1532,47 @@ footer section ul li:hover, footer section ul li a:hover {
   fill: none;
   pointer-events: none;
 }
+.product-page .product-section .product-info .product-info-popups-container {
+  display: flex;
+  gap: 30px;
+  font-size: 14px;
+  font-weight: 500;
+  color: black;
+  margin: 15px 0;
+}
+.product-page .product-section .product-info .product-info-popups-container a:hover {
+  color: #0ec1ae;
+}
+.product-page .product-section .product-info .product-tags {
+  text-transform: capitalize;
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+.product-page .product-section .product-info .product-tags .product-tags-title {
+  color: #868686;
+}
+.product-page .product-section .product-info .product-tags a:hover {
+  color: #0ec1ae;
+}
+.product-page .product-section .product-info .prod-social-share {
+  display: flex;
+  gap: 20px;
+}
+.product-page .product-section .product-info .prod-social-share .social-share-title {
+  color: #868686;
+}
+.product-page .product-section .product-info .prod-social-share .socials {
+  display: flex;
+  gap: 20px;
+}
+.product-page .product-section .product-info .prod-social-share .socials span {
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.product-page .product-section .product-info .prod-social-share .socials span:hover {
+  transform: translateY(-2px);
+  color: #0ec1ae;
+}
 
 .tabs {
   display: flex;
@@ -1562,4 +1628,241 @@ footer section ul li:hover, footer section ul li a:hover {
   transform: translate(0, 0);
   display: block;
   position: relative;
+}
+
+.cart-drawer {
+  width: 430px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 999;
+  background-color: white;
+  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transform: translateX(100%);
+  transition: transform 0.4s, visibility 0.4s, opacity 0.2s;
+}
+@media (max-width: 768px) {
+  .cart-drawer {
+    width: 90%;
+  }
+}
+.cart-drawer.active {
+  transform: translateX(0%);
+  visibility: visible;
+  opacity: 1;
+}
+.cart-drawer .cart-drawer-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
+}
+.cart-drawer .cart-drawer-header .cart-drawer-close-btn {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #e6e6e6;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  cursor: pointer;
+  transform: rotateY("0");
+  transition: transform 0.2s linear;
+}
+.cart-drawer .cart-drawer-header .cart-drawer-close-btn:hover {
+  transform: rotate("180");
+}
+.cart-drawer form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.cart-drawer form .cart-mini-items {
+  overflow-y: scroll;
+  height: 80%;
+  padding-inline: 15px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  border-bottom: 1px solid #e6e6e6;
+  position: relative;
+  margin-top: 15px;
+  padding-bottom: 15px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-item-image {
+  flex: 0 0 auto;
+  width: 100px;
+  max-width: 100px;
+  max-height: 120px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-item-image img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1.2;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info {
+  font-size: 13px;
+  font-weight: 400;
+  color: #222222;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 120px;
+  width: 100%;
+  padding-inline: 20px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .cart-mini-product-title:hover {
+  color: #0ec1ae;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .cart-mini-item-price .dicounted-original-price {
+  text-decoration: line-through;
+  color: #868686;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .cart-mini-item-price .prod-discounted-price {
+  color: red;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .cart-mini-variant-info {
+  color: #868686;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #e6e6e6;
+  min-width: 96px;
+  width: 96px;
+  height: 30px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity .cart-mini-quantity-selector {
+  font-size: 15px;
+  background: none;
+  color: #e6e6e6;
+  padding: 5px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity .cart-mini-quantity-selector:hover {
+  color: #0ec1ae;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity .cart-mini-quantity-selector i {
+  font-size: 13px;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity input {
+  border: none;
+  height: 100%;
+  text-align: center;
+  width: 30px;
+  font-size: 15px;
+  font-weight: 500;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity input::-webkit-outer-spin-button, .cart-drawer form .cart-mini-items .cart-mini-item .cart-mini-product-info .item-total-quantity-edit .cart-mini-prod-quantity input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.cart-drawer form .cart-mini-items .cart-mini-item .remove-cart-mini-line-item {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 20px;
+  width: 20px;
+  border: 1px solid #e6e6e6;
+  border-radius: 50%;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-drawer form .cart-mini-footer {
+  background-color: rgba(219, 219, 219, 0.262);
+  height: 20%;
+  padding: 20px;
+  flex: 0 0 auto;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-sub-total {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-actions .cart-mini-cart-link {
+  padding: 12px 30px;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  font-size: 12px;
+  transition: all 0.2s;
+  cursor: pointer;
+  border-color: black;
+  color: black;
+  min-width: 40%;
+  text-align: center;
+  text-transform: uppercase;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-actions .cart-mini-cart-link:hover {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: black;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-actions .cart-mini-checkout {
+  padding: 12px 30px;
+  color: white;
+  background-color: black;
+  border: 1px solid white;
+  font-size: 12px;
+  transition: all 0.2s;
+  cursor: pointer;
+  min-width: 40%;
+  text-align: center;
+  text-transform: uppercase;
+}
+.cart-drawer form .cart-mini-footer .cart-mini-actions .cart-mini-checkout:hover {
+  background-color: #0ec1ae;
+  color: white;
+  border-color: black;
+}
+
+.background-overlay {
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+}
+.background-overlay.active {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  background-color: rgba(50, 50, 50, 0.4588235294);
+  z-index: 998;
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s;
 }/*# sourceMappingURL=theme.css.map */
